new file:   JAAS.drawio 	modified:   main.py 	new file:   run_bot.py 	new file:   search_config.json 	new file:   test_job_bot.py

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,6 +1,10 @@
 {
     "cSpell.words": [
         "chromedriver",
-        "levelname"
+        "jobsearch",
+        "levelname",
+        "testpass",
+        "webelement",
+        "yosegi"
     ]
 }
