--- a/config.ini
+++ b/config.ini
@@ -1,6 +1,6 @@
 [Indeed]
-email = your.email@example.com
-password = your_password
+email = rapheal.jpeg@gmail.com
+password = Ademola1
 
 [Browser]
 headless = false
